--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,4 +15,6 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: tomcat deploy
+      run: curl -v -u admin:admin -T /home/runner/work/spring3-mvc-maven-xml-hello-world/spring3-mvc-maven-xml-hello-world/target/spring3-mvc-maven-xml-hello-world-1.0-SNAPSHOT.war 'http://ec2-13-234-31-242.ap-south-1.compute.amazonaws.com:8080/manager/text/deploy?path=/gitactions' 
     
